# lib_mango_bd_datamodel

./: .gitignore  CMakeLists.txt  build.sh  install.bat  install.sh  qt5.natvis
doc/: kicad.eapx  参考.txt  块图2.0详细方案设计_数据引擎.eapx  描述.txt  环境变量.docx  立项.pptx
include/MangoBDDataModel/algorithm/: LayeredOptions.h
include/MangoBDDataModel/base/: Config.h  Defines.h  EnumTypes.h  Object.h  ObjectType.h  Property.h  PropertyDef.h  RectTree.h
include/MangoBDDataModel/common/: RTree.h
include/MangoBDDataModel/model/: Arc.h  BDRTree.h  CompositePin.h  Elipse.h  Ellipse.h  GObject.h  GraphElement.h  Label.h  LibSymbol.h  Net.h  Node.h  Pin.h  Polygon.h  Polyline.h  Rectangle.h  Shape.h  Symbol.h
include/MangoBDDataModel/util/: Util.h
include/base/: Defines.h  Object.h  ObjectType.h  Property.h  PropertyDef.h
include/base/impl/: ObjectImpl.h
include/model/: Arc.h  CompositePin.h  Elipse.h  GObject.h  GraphElement.h  Label.h  Net.h  Node.h  Pin.h  Polygon.h  Polyline.h  Rectangle.h  Shape.h  Symbol.h
src/algorithm/: LayeredOptions.cpp
src/algorithm/impl/: LayeredOptionsImpl.cpp  LayeredOptionsImpl.h
src/base/: Object.cpp  ObjectType.cpp  Property.cpp  PropertyDef.cpp
src/base/impl/: ObjectImpl.cpp  ObjectImpl.h  PropertyDefImpl.cpp  PropertyDefImpl.h  PropertyImpl.cpp  PropertyImpl.h
src/model/: Arc.cpp  CompositePin.cpp  Elipse.cpp  Ellipse.cpp  GObject.cpp  GraphElement.cpp  Label.cpp  LibSymbol.cpp  Net.cpp  Node.cpp  Pin.cpp  Polygon.cpp  Polyline.cpp  Rectangle.cpp  Shape.cpp  Symbol.cpp
src/model/impl/: ArcImpl.cpp  ArcImpl.h  CompositePinImpl.cpp  CompositePinImpl.h  ElipseImpl.cpp  ElipseImpl.h  EllipseImpl.h  GObjectImpl.cpp  GObjectImpl.h  GraphElementImpl.cpp  GraphElementImpl.h  LabelImpl.cpp  LabelImpl.h  LibSymbolImpl.cpp  LibSymbolImpl.h  NetImpl.cpp  NetImpl.h  NodeImpl.cpp  NodeImpl.h  PinImpl.cpp  PinImpl.h  PolygonImpl.cpp  PolygonImpl.h  PolylineImpl.cpp  PolylineImpl.h  RectangleImpl.cpp  RectangleImpl.h  ShapeImpl.cpp  ShapeImpl.h  SymbolImpl.cpp  SymbolImpl.h
src/resource/: LayeredOptions.ini  Res.qrc
src/util/: Util.cpp
test/: CMakeLists.txt  Label.cpp  Node.cpp  main.cpp
